@@ -1,8 +1,8 @@
 device(waveform, CONSTANT, devBLDMCastWfRecv, "BLD Data Receiver")
-variable(shuffled)
-variable(tossed)
-variable(tout)
-variable(good)
-variable(mindiff)
-variable(maxdiff)
-variable(MAX_BLOCK_S,double)
+variable(bldmcwf_shuffled)
+variable(bldmcwf_tossed)
+variable(bldmcwf_tout)
+variable(bldmcwf_good)
+variable(bldmcwf_mindiff)
+variable(bldmcwf_maxdiff)
+variable(bldmcwf_max_block_s,double)
